# titoliengine

./: .gitignore  .pre-commit-config.yaml  .vercelignore  README.md  docker-compose.yml  requirements.txt  vercel.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: audit.py  auth.py  copilot.py  deps.py  documents.py  export.py  journal.py  reports.py  securities.py  tenants.py  transactions.py  valuations.py
backend/app/engine/: __init__.py  accruals.py  amortized_cost.py  constants.py  day_count.py  fx.py  gains_losses.py  spread.py  tax.py  tir.py
backend/app/middleware/: encryption.py  rate_limit.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  chart_of_accounts.py  document.py  journal_entry.py  portfolio.py  security.py  tenant.py  transaction.py  valuation.py
backend/app/parser/: base.py  llm_extractor.py  pdf_extractor.py  reconciler.py
backend/app/schemas/: __init__.py  auth.py  copilot.py  document.py  journal_entry.py  report.py  security.py  tenant.py  transaction.py  valuation.py
backend/app/services/: __init__.py  copilot_service.py  document_service.py  journal_service.py  report_service.py  security_service.py  transaction_service.py  valuation_service.py
backend/app/utils/: audit.py  auth.py
backend/scripts/: __init__.py  seed_chart_of_accounts.py  seed_demo.py  seed_securities.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_full_flow.py  (+2 more)
(+72 files in other folders)
